优化：风险号码处理相关接口
